{
  "version": 4,
  "terraform_version": "1.2.6",
  "serial": 97,
  "lineage": "9074c6e6-54f2-a4a3-dfde-f2e406ca716b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip-for-nat-gateway-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d6e38735f06ffa9b",
            "domain": "vpc",
            "id": "eipalloc-0d6e38735f06ffa9b",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-192-220-167.compute-1.amazonaws.com",
            "public_ip": "34.192.220.167",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip_nat_gw_1"
            },
            "tags_all": {
              "Name": "eip_nat_gw_1"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip-for-nat-gateway-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01b52fd994b147451",
            "domain": "vpc",
            "id": "eipalloc-01b52fd994b147451",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-206-47-62.compute-1.amazonaws.com",
            "public_ip": "52.206.47.62",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip_nat_gw_2"
            },
            "tags_all": {
              "Name": "eip_nat_gw_2"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:613508667254:internet-gateway/igw-09e4bddff082a6ff4",
            "id": "igw-09e4bddff082a6ff4",
            "owner_id": "613508667254",
            "tags": {
              "Name": "priv_netwrk_ngw"
            },
            "tags_all": {
              "Name": "priv_netwrk_ngw"
            },
            "vpc_id": "vpc-0fb85c1d2c6a2db43"
          },
          "dependencies": [
            "aws_vpc.vpc_priv"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gateway-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d6e38735f06ffa9b",
            "connectivity_type": "public",
            "id": "nat-0a9168dd62f80d15b",
            "network_interface_id": "eni-07e6ca3e52e9cdd91",
            "private_ip": "192.72.1.57",
            "public_ip": "34.192.220.167",
            "subnet_id": "subnet-0e1658ad607fdc5e7",
            "tags": {
              "Name": "nat-gw-pub1"
            },
            "tags_all": {
              "Name": "nat-gw-pub1"
            }
          },
          "dependencies": [
            "aws_eip.eip-for-nat-gateway-1",
            "aws_subnet.public-subnet-1",
            "aws_vpc.vpc_priv"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gateway-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01b52fd994b147451",
            "connectivity_type": "public",
            "id": "nat-02f47af2396c48485",
            "network_interface_id": "eni-05ede62d0546bcd6b",
            "private_ip": "192.72.1.68",
            "public_ip": "52.206.47.62",
            "subnet_id": "subnet-094d5648f9c4eb8fb",
            "tags": {
              "Name": "nat-gw-pub2"
            },
            "tags_all": {
              "Name": "nat-gw-pub2"
            }
          },
          "dependencies": [
            "aws_eip.eip-for-nat-gateway-2",
            "aws_subnet.public-subnet-2",
            "aws_vpc.vpc_priv"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-route-table-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:613508667254:route-table/rtb-0c0ed29695e180bad",
            "id": "rtb-0c0ed29695e180bad",
            "owner_id": "613508667254",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a9168dd62f80d15b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Priv_rtb_1"
            },
            "tags_all": {
              "Name": "Priv_rtb_1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fb85c1d2c6a2db43"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip-for-nat-gateway-1",
            "aws_nat_gateway.nat-gateway-1",
            "aws_subnet.public-subnet-1",
            "aws_vpc.vpc_priv"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-route-table-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:613508667254:route-table/rtb-004fcb6ada050624c",
            "id": "rtb-004fcb6ada050624c",
            "owner_id": "613508667254",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-02f47af2396c48485",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Priv_rtb_2"
            },
            "tags_all": {
              "Name": "Priv_rtb_2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fb85c1d2c6a2db43"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip-for-nat-gateway-2",
            "aws_nat_gateway.nat-gateway-2",
            "aws_subnet.public-subnet-2",
            "aws_vpc.vpc_priv"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:613508667254:route-table/rtb-030160fce7857ef02",
            "id": "rtb-030160fce7857ef02",
            "owner_id": "613508667254",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09e4bddff082a6ff4",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Pub_rtb"
            },
            "tags_all": {
              "Name": "Pub_rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fb85c1d2c6a2db43"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet-gateway",
            "aws_vpc.vpc_priv"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-subnet-1-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05ba797dd2c39ac09",
            "route_table_id": "rtb-0c0ed29695e180bad",
            "subnet_id": "subnet-0f6f39485a2910dab"
          },
          "dependencies": [
            "aws_eip.eip-for-nat-gateway-1",
            "aws_nat_gateway.nat-gateway-1",
            "aws_route_table.private-route-table-1",
            "aws_subnet.private-subnet-1",
            "aws_subnet.public-subnet-1",
            "aws_vpc.vpc_priv"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-subnet-2-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c47535d2fa0c5693",
            "route_table_id": "rtb-004fcb6ada050624c",
            "subnet_id": "subnet-06be8859b28f40af0"
          },
          "dependencies": [
            "aws_eip.eip-for-nat-gateway-2",
            "aws_nat_gateway.nat-gateway-2",
            "aws_route_table.private-route-table-2",
            "aws_subnet.private-subnet-2",
            "aws_subnet.public-subnet-2",
            "aws_vpc.vpc_priv"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-subnet-3-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-007230c747c36ac46",
            "route_table_id": "rtb-0c0ed29695e180bad",
            "subnet_id": "subnet-059b6708fe46af0ff"
          },
          "dependencies": [
            "aws_eip.eip-for-nat-gateway-1",
            "aws_nat_gateway.nat-gateway-1",
            "aws_route_table.private-route-table-1",
            "aws_subnet.private-subnet-3",
            "aws_subnet.public-subnet-1",
            "aws_vpc.vpc_priv"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-subnet-4-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d738c20771359072",
            "route_table_id": "rtb-004fcb6ada050624c",
            "subnet_id": "subnet-005b1138a408d8f04"
          },
          "dependencies": [
            "aws_eip.eip-for-nat-gateway-2",
            "aws_nat_gateway.nat-gateway-2",
            "aws_route_table.private-route-table-2",
            "aws_subnet.private-subnet-4",
            "aws_subnet.public-subnet-2",
            "aws_vpc.vpc_priv"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet-1-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04636dcbe7de75072",
            "route_table_id": "rtb-030160fce7857ef02",
            "subnet_id": "subnet-0e1658ad607fdc5e7"
          },
          "dependencies": [
            "aws_internet_gateway.internet-gateway",
            "aws_route_table.public-route-table",
            "aws_subnet.public-subnet-1",
            "aws_vpc.vpc_priv"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet-2-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0654a295a9390080d",
            "route_table_id": "rtb-030160fce7857ef02",
            "subnet_id": "subnet-094d5648f9c4eb8fb"
          },
          "dependencies": [
            "aws_internet_gateway.internet-gateway",
            "aws_route_table.public-route-table",
            "aws_subnet.public-subnet-2",
            "aws_vpc.vpc_priv"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:613508667254:security-group/sg-047df4f61c13ab936",
            "description": "for apps access via internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-047df4f61c13ab936",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "https access",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "alb__apps_sg",
            "name_prefix": "",
            "owner_id": "613508667254",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb__apps_sg_access"
            },
            "tags_all": {
              "Name": "alb__apps_sg_access"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fb85c1d2c6a2db43"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_priv"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:613508667254:security-group/sg-010d6c05f8720ecff",
            "description": "for rds mysql auroora acess",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-010d6c05f8720ecff",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "mysql/aurora acess",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0273180492e94d805"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rds_sg",
            "name_prefix": "",
            "owner_id": "613508667254",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rds_sg_access_via_webserver_sg"
            },
            "tags_all": {
              "Name": "rds_sg_access_via_webserver_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fb85c1d2c6a2db43"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb-security-group",
            "aws_security_group.ssh-security-group",
            "aws_security_group.webserver-security-group",
            "aws_vpc.vpc_priv"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:613508667254:security-group/sg-0b725c92f73e7f447",
            "description": "for security access using ssh",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b725c92f73e7f447",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "for ssh access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "SSH_BastionHost_sg",
            "name_prefix": "",
            "owner_id": "613508667254",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SSH_BastionHost_sg"
            },
            "tags_all": {
              "Name": "SSH_BastionHost_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fb85c1d2c6a2db43"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_priv"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webserver-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:613508667254:security-group/sg-0273180492e94d805",
            "description": "for web server access via https/http",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0273180492e94d805",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "http access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-047df4f61c13ab936"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "https access",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-047df4f61c13ab936"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "ssh access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b725c92f73e7f447"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "webserver_sg",
            "name_prefix": "",
            "owner_id": "613508667254",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web_server_access"
            },
            "tags_all": {
              "Name": "web_server_access"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fb85c1d2c6a2db43"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb-security-group",
            "aws_security_group.ssh-security-group",
            "aws_vpc.vpc_priv"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:613508667254:subnet/subnet-0f6f39485a2910dab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.72.1.96/27",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f6f39485a2910dab",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "613508667254",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Priv_subnet1|apps"
            },
            "tags_all": {
              "Name": "Priv_subnet1|apps"
            },
            "vpc_id": "vpc-0fb85c1d2c6a2db43"
          },
          "dependencies": [
            "aws_vpc.vpc_priv"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:613508667254:subnet/subnet-06be8859b28f40af0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.72.1.128/27",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06be8859b28f40af0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "613508667254",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Priv_subnet2|db"
            },
            "tags_all": {
              "Name": "Priv_subnet2|db"
            },
            "vpc_id": "vpc-0fb85c1d2c6a2db43"
          },
          "dependencies": [
            "aws_vpc.vpc_priv"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:613508667254:subnet/subnet-059b6708fe46af0ff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.72.1.160/27",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-059b6708fe46af0ff",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "613508667254",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Priv_subnet3|app"
            },
            "tags_all": {
              "Name": "Priv_subnet3|app"
            },
            "vpc_id": "vpc-0fb85c1d2c6a2db43"
          },
          "dependencies": [
            "aws_vpc.vpc_priv"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:613508667254:subnet/subnet-005b1138a408d8f04",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.72.1.192/27",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-005b1138a408d8f04",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "613508667254",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Priv_subnet4|db"
            },
            "tags_all": {
              "Name": "Priv_subnet4|db"
            },
            "vpc_id": "vpc-0fb85c1d2c6a2db43"
          },
          "dependencies": [
            "aws_vpc.vpc_priv"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:613508667254:subnet/subnet-0e1658ad607fdc5e7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.72.1.32/27",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e1658ad607fdc5e7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "613508667254",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Pub_subnet1"
            },
            "tags_all": {
              "Name": "Pub_subnet1"
            },
            "vpc_id": "vpc-0fb85c1d2c6a2db43"
          },
          "dependencies": [
            "aws_vpc.vpc_priv"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:613508667254:subnet/subnet-094d5648f9c4eb8fb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.72.1.64/27",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-094d5648f9c4eb8fb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "613508667254",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Pub_subnet2"
            },
            "tags_all": {
              "Name": "Pub_subnet2"
            },
            "vpc_id": "vpc-0fb85c1d2c6a2db43"
          },
          "dependencies": [
            "aws_vpc.vpc_priv"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_priv",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:613508667254:vpc/vpc-0fb85c1d2c6a2db43",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.72.0.0/20",
            "default_network_acl_id": "acl-0215bac3ba1f88b16",
            "default_route_table_id": "rtb-063f41852dd5029a4",
            "default_security_group_id": "sg-0cd245353e1272c3b",
            "dhcp_options_id": "dopt-0581de5c41f7565c5",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0fb85c1d2c6a2db43",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-063f41852dd5029a4",
            "owner_id": "613508667254",
            "tags": {
              "Name": "private_network_vpc"
            },
            "tags_all": {
              "Name": "private_network_vpc"
            }
          }
        }
      ]
    }
  ]
}